python-ecdsa (0.13.3-1) UNRELEASED; urgency=medium

  * New upstream release (0.13.3)

 -- Josue Ortega <josue@debian.org>  Wed, 09 Oct 2019 18:36:44 -0600

python-ecdsa (0.13.2-3) unstable; urgency=medium
  [ Ondřej Nový ]
  * Bump Standards-Version to 4.4.0.

  [ Josue Ortega ]
  * Add salsa-ci configuration file.
  * Remove python2 package:
    - debian/rules: Remove override_dh_auto_install section, no longer needed.
  * debian/rules: Add PYBUILD_NAME variable.
  * Remove obsolete python3-ecdsa.install.
  * Add patch to avoid module pollution with test files.

 -- Josue Ortega <josue@debian.org>  Mon, 12 Aug 2019 14:36:53 -0600

python-ecdsa (0.13.2-2) unstable; urgency=medium

  * Upload to unstable.

 -- Josue Ortega <josue@debian.org>  Wed, 10 Jul 2019 19:34:32 -0600

python-ecdsa (0.13.2-1) experimental; urgency=medium

  [ Ondřej Nový ]
  * d/tests: Use AUTOPKGTEST_TMP instead of ADTTMP
  * d/control: Remove ancient X-Python-Version field
  * Convert git repository from git-dpm to gbp layout

  [ Josue Ortega ]
  * New upstream release (0.13.2):
    -  Refresh debian/patches/system-six.patch.
  * Bump compat level to use debhelper-compat (= 12)
  * Bump Standards-Version to 4.3.0:
    - Add Rules-Requires-Root field.

 -- Josue Ortega <josue@debian.org>  Sat, 11 May 2019 17:03:07 -0600

python-ecdsa (0.13-3) unstable; urgency=medium

  [ Ondřej Nový ]
  * Fixed VCS URL (https)
  * d/control: Set Vcs-* to salsa.debian.org
  * d/copyright: Use https protocol in Format field
  * d/watch: Use https protocol
  * d/control: Remove XS-Testsuite field, not needed anymore

  [ Josue Ortega ]
  * New maintainer (Closes: #874388).
  * Bumps debhelper compat level from 9 to 11.
  * Bumps Standards-Version to 4.1.3, Ondřej Nový made the necessary changes.
  * Bumps X-Python-Version and X-Python3-Version version.

 -- Josue Ortega <josue@debian.org>  Sun, 01 Apr 2018 13:26:44 -0600

python-ecdsa (0.13-2) unstable; urgency=medium

  * Upload to unstable.
